[gd_scene load_steps=3 format=3 uid="uid://e0ndsfid0wtf"]

[ext_resource type="Script" path="res://menu/main_menu_logic.gd" id="1_phfwy"]
[ext_resource type="Script" path="res://menu/options_menu_logic.gd" id="2_h8yve"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuContainer" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("1_phfwy")

[node name="NewGameButton" type="Button" parent="CenterContainer/MainMenuContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/MainMenuContainer"]
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="CenterContainer/MainMenuContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/MainMenuContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsContainer" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 24
script = ExtResource("2_h8yve")

[node name="SoundVolume" type="HBoxContainer" parent="CenterContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/OptionsContainer/SoundVolume"]
layout_mode = 2
text = "0%"

[node name="HSlider" type="HSlider" parent="CenterContainer/OptionsContainer/SoundVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 50.0

[node name="FullscreenContainer" type="HBoxContainer" parent="CenterContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/OptionsContainer/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="CenterContainer/OptionsContainer/FullscreenContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/OptionsContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/MainMenuContainer/NewGameButton" to="CenterContainer/MainMenuContainer" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainMenuContainer/OptionsButton" to="CenterContainer/MainMenuContainer" method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainMenuContainer/QuitButton" to="CenterContainer/MainMenuContainer" method="_on_quit_button_pressed"]
[connection signal="value_changed" from="CenterContainer/OptionsContainer/SoundVolume/HSlider" to="CenterContainer/OptionsContainer" method="_on_h_slider_value_changed"]
[connection signal="toggled" from="CenterContainer/OptionsContainer/FullscreenContainer/CheckButton" to="CenterContainer/OptionsContainer" method="_on_check_button_toggled"]
[connection signal="pressed" from="CenterContainer/OptionsContainer/BackButton" to="CenterContainer/OptionsContainer" method="_on_back_button_pressed"]
